# Lisa

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: ECC_LISA_USAGE.md  settings.local.json
design-prototypes/: approved-lisa-orb-prototype.html
docs/: ARCHITECTURE.md  PHASE_0_IMPLEMENTATION.md  PHASE_1_LOCAL_AI_RUNTIME.md  PHASE_2_TOOL_SKILL_FRAMEWORK.md  PHASE_3B_LOCAL_STT_SPIKE.md  PHASE_3C_WHISPER_ENGINE_FOUNDATION.md  PHASE_3D_MICROPHONE_CAPTURE_PIPELINE.md  PHASE_3E_LOCAL_TTS_VOICE_OUTPUT.md  PHASE_3F_VOICE_INTERACTION_POLISH.md  PHASE_3_VOICE_FOUNDATION.md  PHASE_4A_SCREEN_AWARENESS_FOUNDATION.md  PHASE_4C_LOCAL_OCR_SCREEN_TEXT.md  PHASE_4D_GROUNDED_SCREEN_REASONING.md  PRD_Lisa.md  PRD_Lisa_Part_2.md  ROADMAP.md  VISUAL_IDENTITY.md  visual_direction.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  ocr.rs  screen.rs  stt.rs  tts.rs
src/__tests__/: LisaContext.test.ts  LisaContextDef.test.ts  audit-store.test.ts  command-router.test.ts  lisa-reducer.test.ts  llm-context.test.ts  memory-command-output.test.ts  mission-store.test.ts  mode-store.test.ts  ocr.test.ts  ollama-error.test.ts  persistence.test.ts  runtime-health.test.ts  screen-reasoning.test.ts  tool-executors.test.ts  tool-registry.test.ts  tool-request-reducer.test.ts  tool-request-utils.test.ts  tool-runner.test.ts  tool-suggestions.test.ts  tts.test.ts  types.test.ts  useLisa.test.ts  voice-button.test.ts  voice-conversation.test.ts  voice-flow.test.ts
src/app/: LisaContext.tsx  LisaContextDef.ts  lisa-reducer.ts  useLisa.ts
src/core/: audit-store.ts  command-router.ts  llm-context.ts  mission-store.ts  mode-store.ts  ocr.ts  ollama-error.ts  persistence.ts  runtime-health.ts  screen-reasoning.ts  tool-executors.ts  tool-registry.ts  tool-request-utils.ts  tool-runner.ts  tool-suggestions.ts  tts.ts  (+2 more)
(+29 files in other folders)
