[package]
name = "lisa"
version = "0.1.0"
description = "Lisa — JARVIS-like Local Desktop AI Operating Companion"
authors = ["Abas"]
edition = "2021"

[lib]
name = "lisa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lisa"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
