[package]
name = "lisa"
version = "0.1.0"
description = "Lisa — JARVIS-like Local Desktop AI Operating Companion"
authors = ["Abas"]
edition = "2021"

[lib]
name = "lisa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lisa"
path = "src/main.rs"

[features]
default = []
# Enable the Whisper STT engine. Requires LLVM + CMake on Windows (one-time setup).
# Build: cargo build --features whisper
# CI runs without this feature — cargo check/test pass without LLVM or model files.
whisper = ["dep:whisper-rs", "dep:hound"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
futures = "0.3"
whisper-rs = { version = "0.16", optional = true }
hound = { version = "3.5", optional = true }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
